tests/test_files/valid/new_lines.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Struct MyLocationInheritence : Location


    weight : string


End

Event agvLoaded


    name : "lager_agv_loaded"


    value : false


End

Rule orderOfEvents(event1, event2)


    before(event1, event2, 50) # implicit and

    before(event2, event3) # implicit and



    event2.value == 100



End



Rule before(event1, event2, offset = 0)

    (event1.time + offset < event2.time) And (event1.value == 5)

End

TransportOrderStep tosWarehouse1

    Location warehouse1

    FinishedBy agvLoaded.value == true


End

TransportOrderStep tosProduction1

    Location production1


    # JSON inline initialization


    Parameters {"loadDirection" : "unload" , "liftHeight": 0}



End


ActionOrderStep aosWarehouse1
    Parameters {"loadDirection" : "load" , "liftHeight": 0}
End


Task helloWorld
    Transport


    From tosWarehouse1


    To tosProduction1


    Transport
    From tosWarehouse1
    To tosProduction1

    Move

    
    To tosWarehouse1

    Action

    
    Do aosWarehouse1
End




