tests/test_files/invalid/syntax/expr_misspelled_or.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Rule orderOfEvents(event1, event2)
    before(event1, event2, 50) or before(event2, event3)
End
